deploy/salesforce/objects/QMS_CAPA__c/QMS_CAPA__c.object-meta.xml
<CustomObject>
    <description>Salesforce shadow record for QMS GenAI CAPA drafts created from Cases.</description>
    <label>QMS CAPA</label>
    <nameField>
        <displayFormat>QMS-CAPA-{00000}</displayFormat>
        <label>QMS CAPA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QMS CAPAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>