deploy/salesforce/objects/QMS_CAPA__c/fields/Affected_Functions__c.field-meta.xml
<CustomField>
    <fullName>Affected_Functions__c</fullName>
    <label>Affected Functions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>