deploy/salesforce/objects/QMS_CAPA__c/fields/Agent_Summary__c.field-meta.xml
<CustomField>
    <fullName>Agent_Summary__c</fullName>
    <label>Agent Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>