deploy/salesforce/objects/QMS_CAPA__c/fields/Authority_Notification_Required__c.field-meta.xml
<CustomField>
    <fullName>Authority_Notification_Required__c</fullName>
    <label>Authority Notification Required</label>
    <length>20</length>
    <type>Text</type>
</CustomField>