deploy/salesforce/objects/QMS_CAPA__c/fields/CAPA_Owner__c.field-meta.xml
<CustomField>
    <fullName>CAPA_Owner__c</fullName>
    <label>CAPA Owner</label>
    <length>120</length>
    <type>Text</type>
</CustomField>