deploy/salesforce/objects/QMS_CAPA__c/fields/Effectiveness_Check__c.field-meta.xml
<CustomField>
    <fullName>Effectiveness_Check__c</fullName>
    <label>Effectiveness Check</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>