deploy/salesforce/objects/QMS_CAPA__c/fields/Effectiveness_Check_Required__c.field-meta.xml
<CustomField>
    <fullName>Effectiveness_Check_Required__c</fullName>
    <label>Effectiveness Check Required</label>
    <length>20</length>
    <type>Text</type>
</CustomField>