deploy/salesforce/objects/QMS_CAPA__c/fields/Estimated_Closure_Days__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Closure_Days__c</fullName>
    <label>Estimated Closure Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>