deploy/salesforce/objects/QMS_CAPA__c/fields/Immediate_Action__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Action__c</fullName>
    <label>Immediate Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>