deploy/salesforce/objects/QMS_CAPA__c/fields/Impact_Assessment_Detail__c.field-meta.xml
<CustomField>
    <fullName>Impact_Assessment_Detail__c</fullName>
    <label>Impact Assessment Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>