deploy/salesforce/objects/QMS_CAPA__c/fields/Impact_Scope__c.field-meta.xml
<CustomField>
    <fullName>Impact_Scope__c</fullName>
    <label>Impact Scope</label>
    <length>120</length>
    <type>Text</type>
</CustomField>