deploy/salesforce/objects/QMS_CAPA__c/fields/LLM_Model__c.field-meta.xml
<CustomField>
    <fullName>LLM_Model__c</fullName>
    <label>LLM Model</label>
    <length>160</length>
    <type>Text</type>
</CustomField>