deploy/salesforce/objects/QMS_CAPA__c/fields/LLM_Provider__c.field-meta.xml
<CustomField>
    <fullName>LLM_Provider__c</fullName>
    <label>LLM Provider</label>
    <length>80</length>
    <type>Text</type>
</CustomField>