deploy/salesforce/objects/QMS_CAPA__c/fields/Preventive_Action__c.field-meta.xml
<CustomField>
    <fullName>Preventive_Action__c</fullName>
    <label>Preventive Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>