deploy/salesforce/objects/QMS_CAPA__c/fields/QMS_CAPA_ID__c.field-meta.xml
<CustomField>
    <fullName>QMS_CAPA_ID__c</fullName>
    <externalId>true</externalId>
    <label>QMS CAPA ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>