deploy/salesforce/objects/QMS_CAPA__c/fields/QMS_URL__c.field-meta.xml
<CustomField>
    <fullName>QMS_URL__c</fullName>
    <label>QMS URL</label>
    <type>Url</type>
</CustomField>