deploy/salesforce/objects/QMS_CAPA__c/fields/Regulatory_References__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_References__c</fullName>
    <label>Regulatory References</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>