deploy/salesforce/objects/QMS_CAPA__c/fields/Repeat_Event__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Event__c</fullName>
    <label>Repeat Event</label>
    <length>20</length>
    <type>Text</type>
</CustomField>