deploy/salesforce/objects/QMS_CAPA__c/fields/Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>Risk_Rating__c</fullName>
    <label>Risk Rating</label>
    <length>40</length>
    <type>Text</type>
</CustomField>