deploy/salesforce/objects/QMS_CAPA__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <length>80</length>
    <type>Text</type>
</CustomField>