deploy/salesforce/objects/QMS_CAPA__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site</label>
    <length>120</length>
    <type>Text</type>
</CustomField>