deploy/salesforce/objects/QMS_CAPA__c/fields/Source_Case__c.field-meta.xml
<CustomField>
    <fullName>Source_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>QMS CAPAs</relationshipLabel>
    <relationshipName>QMS_CAPAs</relationshipName>
    <type>Lookup</type>
</CustomField>