deploy/salesforce/objects/QMS_CAPA__c/fields/Source_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Source_Complaint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Complaint</label>
    <referenceTo>Complaint__c</referenceTo>
    <relationshipLabel>QMS CAPAs</relationshipLabel>
    <relationshipName>QMS_Complaint_CAPAs</relationshipName>
    <type>Lookup</type>
</CustomField>