deploy/salesforce/objects/QMS_CAPA__c/fields/Source_Priority__c.field-meta.xml
<CustomField>
    <fullName>Source_Priority__c</fullName>
    <label>Source Priority</label>
    <length>40</length>
    <type>Text</type>
</CustomField>