deploy/salesforce/objects/QMS_CAPA__c/fields/Source_Record_Title__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Title__c</fullName>
    <label>Issue Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>