deploy/salesforce/objects/QMS_CAPA__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Draft Generated</fullName><default>false</default><label>Draft Generated</label></value>
            <value><fullName>Under Review</fullName><default>true</default><label>Under Review</label></value>
            <value><fullName>Pending Approval</fullName><default>false</default><label>Pending Approval</label></value>
            <value><fullName>Pending Correction</fullName><default>false</default><label>Pending Correction</label></value>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
            <value><fullName>Closed</fullName><default>false</default><label>Closed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>