deploy/salesforce/objects/QMS_CAPA__c/fields/Supplier_Related__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Related__c</fullName>
    <label>Supplier Related</label>
    <length>20</length>
    <type>Text</type>
</CustomField>