deploy/salesforce/objects/QMS_CAPA__c/fields/Target_Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Closure_Date__c</fullName>
    <label>Target Closure Date</label>
    <type>Date</type>
</CustomField>